add new div wuth hello

--- a/Bank of Capital/index.html
+++ b/Bank of Capital/index.html
@@ -23,6 +23,9 @@
                     <a href="#">Feedback</a>
                 </div>
             </div>
+            <div class="hello">
+                hello
+            </div>
             <div class="downmid">
                 <a href="#" target="-main"><img src="mlogo.png" height="100px" alt="LINKEDIN"></a>
                 <h2>Bank Of Capital</h2>
